--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,9 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "sass": "^1.34.0",
-    "sass-loader": "^11.1.1"
   }
 }
